--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "meteor-node-stubs": "~0.2.0"
+    "apollo-client": "^0.5.0",
+    "graphql-tag": "^0.1.15",
+    "meteor-node-stubs": "~0.2.0",
+    "react": "^15.3.2",
+    "react-addons-pure-render-mixin": "^15.3.2",
+    "react-apollo": "^0.5.16",
+    "react-dom": "^15.3.2"
   }
 }
